# tensorflops

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindTensorFlow.cmake
ext/gtest/: CMakeLists.txt
src/k-nearest-neighbor/: CMakeLists.txt  LICENSE.md  k_nearest_neighbor_op.cc  k_nearest_neighbor_op.h  k_nearest_neighbor_op_gpu.cu.cc  k_nearest_neighbor_op_test.py  test.cpp
src/k_nearest_neighbor/: CMakeLists.txt  __init__.py  k_nearest_neighbor.cc  k_nearest_neighbor_kernel.cc  k_nearest_neighbor_kernel_gpu.cu.cc  k_nearest_neighbor_op.cc  k_nearest_neighbor_op.h  test_k_nearest_neighbor.py
src/k_nearest_neighbor/test/test1/: knn_dist.csv  knn_index.csv  meta.csv  points.csv  query_points.csv
src/k_nearest_neighbor/test/test2/: meta.csv  points.csv  query_points.csv
src/k_nearest_neighbor/test/test3/: knn_dist.csv  knn_index.csv  meta.csv  points.csv  query_points.csv
